fix horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -282,6 +282,10 @@ padding: 30px;
     width: 80%;
 }
 }
+.container {
+    padding-left: 0;
+    padding-right: 0;
+}
 
 
 .nav-link {
